# armourd

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README.md  armour.c  armour.h  armour_config.c  armour_proc.c  armour_proc.h  armour_watchdog.c  armourd.conf.in  autogen.sh  configure.ac  debug.h  events.h  index.html  main.c  params.json
dbus/: armour_dbus.c  client-example.py  client.py  com_github_armourd_xml.h
debian/: changelog  control  copyright  rules
src/: armour.c  armour.h  armour_config.c  armour_proc.c  armour_proc.h  armour_watchdog.h  config.c  debug.h  list.h  log.c  log.h  main.c  proc.c  proc.h  watchdog.c  watchdog.h
src/dbus/: armour_dbus.h
